--- a/src/components/modules/Navbar/Navbar.astro
+++ b/src/components/modules/Navbar/Navbar.astro
@@ -21,6 +21,9 @@ import Buttons from "@nanoModules/buttons/buttons.astro";
       <li><a href="#PreFooter">Contact</a></li>
     </ul>
   </nav>
+  <Buttons text="Get In Touch" type = "btn-filled"/>
 
-  <Buttons text="Get In Touch" type = btn-filled />
+
 </div>
+
+
