--- a/src/components/modules/Products/Products.css
+++ b/src/components/modules/Products/Products.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
   
 }
-.Products-Cards .card-element  {
+.Products-Cards .Card  {
   
   align-items: left;
   text-align: left;
@@ -16,15 +16,15 @@
   
 }
 
-.Products-Cards .card-element .descrip {
+.Products-Cards .Card .description {
   font-size: 0.9rem;
-  text-align: left;
+  text-align: center;
   margin-bottom: 1rem;
   
   
   line-height: 1.4;
 }
-.Products-Cards .card-element .contact-button {
+.Products-Cards .Card .contact-button {
   text-align: center;         /* push its child button to the left */ 
   margin-top: 2rem;     
   padding: 1rem 2rem; /* Increase padding for height and width */
