--- a/src/components/modules/Courses/Courses.astro
+++ b/src/components/modules/Courses/Courses.astro
@@ -5,6 +5,7 @@ import SectionHeader from "@nanoModules/sectionHeader/sectionHeader.astro";
 ---
 
 <section id="Courses" class="section">
+  <div class="Courses">
 
   <SectionHeader
   heading = "Technical Courses"
@@ -48,7 +49,7 @@ import SectionHeader from "@nanoModules/sectionHeader/sectionHeader.astro";
     enrollUrl="/enroll/control"
   />
   </div>
-  
+</div>
 </section>
 
 
