--- a/src/components/modules/Courses/Courses.css
+++ b/src/components/modules/Courses/Courses.css
@@ -2,16 +2,16 @@
 
 .course-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  max-width: 900px;
-  margin: auto;
-  gap: 5rem;
-  padding: 1rem;
+
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  grid-auto-rows: auto;
 }
 
 /* Force 2 max per row */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .course-grid {
     grid-template-columns: repeat(2, 1fr);
   }
-}
+} */
+
