--- a/src/components/modules/Navbar/Navbar.astro
+++ b/src/components/modules/Navbar/Navbar.astro
@@ -9,7 +9,7 @@ import Buttons from "@nanoModules/buttons/buttons.astro";
     <a href="#top">
       <img class="logo-img" src="/assets/img/MCCLogo.png" alt="MC² Logo" />
     </a>
-    <span class="sub-logo">Microelectronic Corporations</span>
+    <span class="sub-logo">Microelectronics Corporations</span>
   </div>
 
   <nav class="nav-links">
@@ -17,7 +17,9 @@ import Buttons from "@nanoModules/buttons/buttons.astro";
       <li><a href="#About">About</a></li>
       <li><a href="#Services">Services</a></li>
       <li><a href="#Portfolio">Portfolio</a></li>
-      <li><a href="#Products">Courses</a></li>
+      <li><a href="#Courses">Courses</a></li>
+      <li><a href="#Products">Products</a></li>
+      
       <li><a href="#PreFooter">Contact</a></li>
     </ul>
   </nav>
