--- a/src/components/ui/courseCard/courseCard.css
+++ b/src/components/ui/courseCard/courseCard.css
@@ -2,9 +2,11 @@
     margin-top: 1rem;
     border: 1px solid #e0e7ff;
     border-radius: 12px;
-    padding: 1.5rem;
-    max-width: 500px;
-    width: 100%;
+    padding: 1.1rem;
+    /* max-width: 500px; */
+    /* width: 100%; */
+  
+
     background: white;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
     font-family: system-ui, sans-serif;
@@ -69,5 +71,4 @@
     justify-content: space-between;
     margin-top: 1rem;
   }
-  
   
