--- a/src/components/nano-modules/sectionHeader/sectionHeader.css
+++ b/src/components/nano-modules/sectionHeader/sectionHeader.css
@@ -4,19 +4,13 @@
 
   color: #213a79;
 
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   line-height: 1.2;
 
 }
 
 .sectionAbout h1 {
-  margin-top: 5rem;
-  font-weight: 700;
-  font-size: 60px;
-
-}
-.sectionAbout h1 {
-  margin-top: 5rem;
+  margin-top: 0.1rem;
   font-weight: 700;
   font-size: 60px;
 
@@ -29,7 +23,7 @@
 }
 
 .sectionAbout p {
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 
   font-size: 20px;
 
