--- a/src/components/modules/Services/Services.astro
+++ b/src/components/modules/Services/Services.astro
@@ -6,6 +6,7 @@ import SectionHeader from "@nanoModules/sectionHeader/sectionHeader.astro";
 ---
 
 <section id="Services" class="section">
+<div class="Services">
 <div class="services-header">
   <SectionHeader
  heading = "Our Services"
@@ -47,4 +48,5 @@ description="State-of-the-art microelectronic components and robotic systems des
 
         
   </div>
+</div>
 </section>
