--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import "@styles/index.css"
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>MCC</title>
     <meta
       name="description"
