--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,16 @@ import "@styles/index.css"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>MCC</title>
+    <title>MccRobotics</title>
     <meta
       name="description"
       content="Welcome to the future. Building something amazing."
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/assets/img/Micon2.png" type="image/png" sizes="1x3">
+
+
+    
+
   </head>
 
   <body>
