--- a/src/components/nano-modules/buttons/buttons.css
+++ b/src/components/nano-modules/buttons/buttons.css
@@ -17,10 +17,10 @@
   
   .btn-filled {
     padding: 0.5rem 1rem;
+    border: 1px solid #2563eb;
     background-color: #2563eb;
     color: white;
     font-weight: 600;
-    border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: 0.2s ease;
