--- a/src/components/modules/Navbar/Navbar.astro
+++ b/src/components/modules/Navbar/Navbar.astro
@@ -5,6 +5,11 @@ import Buttons from "@nanoModules/buttons/buttons.astro";
 
 <!-- HTML -->
 <div class="navbar">
+  <script src="./scroll.js"></script>
+  <script src="./ElementHighlight.js"></script>
+  <a href="/dashboard/dashboard">
+    sdf
+  </a>
   <div class="logo">
     <a href="#top">
       <img class="logo-img" src="/assets/img/MCCLogo.png" alt="MC² Logo" />
@@ -27,5 +32,6 @@ import Buttons from "@nanoModules/buttons/buttons.astro";
 
 
 </div>
+
 
 
